--- a/start.html
+++ b/start.html
@@ -9,6 +9,17 @@
   <body>
     <h1>My Start file is not index.html file</h1>
     <h3>New destination</h3>
+    <div>
+      <h3>New blog</h3>
+      <h5>Look mama, i can write a blog</h5>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur
+        aut rem odio impedit? A nulla commodi, repellendus quia illum autem qui
+        illo voluptate accusantium ad praesentium quaerat reprehenderit fugiat,
+        expedita explicabo aliquid eligendi quas. Nulla maxime ipsam et
+        perferendis dolore.
+      </p>
+    </div>
     <img src="cat-2.jpg" alt="" />
   </body>
 </html>
